# ochabot

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.prd.yml  docker-compose.yml  env.example  main.py  pyproject.toml  testing_socket.py
.github/: pull_request_template.md
.github/workflows/: production.yml
app/: __init__.py
app/appctx/: __init__.py  websocket.py
app/core/: __init__.py
app/entity/: __init__.py  client.py  client_socket.py  ingest_document.py  prompt.py  scope_prompt.py  setup.py  user.py
app/presentation/: request.py
app/repositories/: __init__.py  client.py  example.py  ingest_document.py  llm.py  prompt.py  retriever.py  save_history.py  scope_prompt.py  setup.py  socket_client.py  user.py
app/router/: http.py
app/ucase/: __init__.py  callback.py  chat.py  datasheet.py  retriever.py  webhook.py
bootstrap/: chroma.py  database.py  deepseek.py  elasticsearch.py  groq.py  jwt.py  langchain.py  logging.py  minio.py  mistral.py  mongo.py  ollama.py  openai.py  prompter.py  redis.py  vectorstore.py
config/: logger.py  multiprocessing.py
deployment/: env-dev.sh  env-prd.sh  env-stg.sh
deployment/dockerfiles/: dockerfile-dev  dockerfile-prd  dockerfile-stg
deployment/helm/: Chart.yaml  Chart.yaml.tpl  values.yaml  values.yaml.tpl
docs/: KAJ-GPT-CHAT.postman_collection.json
migrations/: env.py
migrations/versions/: 288d9677323f_create_socketclient_table.py  2f53dc5d17f0_scope_prompt.py  31b92c51b921_create_table_config.py  34e25b210fc0_create_table_ingest_historie.py  3651aba10099_create_index_table_prompt.py  3651aba10099_create_table_prompt.py  3f10f02af3b4_create_index_table_config.py  3fd2aaf0a53d_index_table_config.py  5842f4c904f6_create_default_user.py  5870acc8a775_update_table_ingest_docs.py  5ff6e72c50ab_create_table_client_socket.py  6ab51ca9eb36_create_configuration_table.py  (+4 more)
(+103 files in other folders)
